crates/core/tests/ui/typed_macro/fail/legacy_command_syntax.stderr
error: `command!` no longer accepts the old explicit-codec form `command!("...", params = ...)`; use schema-aware typed SQL (`command!(schema = { ... }, INSERT/UPDATE/DELETE ...)`) or an authored schema wrapper like `app_schema::command!(...)`. For unsupported statements, use `Query::raw` / `Command::raw`.
 --> tests/ui/typed_macro/fail/legacy_command_syntax.rs:5:9
  |
5 |         "INSERT INTO users (id, name) VALUES ($1, $2)",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
